--- a/Backend/mini7/src/main/resources/application.properties
+++ b/Backend/mini7/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=mini7
 server.port=${PORT:8080}
 hospital.api.host=http://127.0.0.1:8000
+
+logging.level.root=DEBUG
+spring.output.ansi.enabled=ALWAYS
