--- a/Backend/mini7/build.gradle
+++ b/Backend/mini7/build.gradle
@@ -24,10 +24,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	// implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+    implementation 'org.hibernate.orm:hibernate-community-dialects:6.2.7.Final'
+	// implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 //    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
