Feat: Add properties SQLite and JPA

--- a/Backend/mini7/src/main/resources/application.properties
+++ b/Backend/mini7/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=mini7
 server.port=${PORT:8080}
 spring.profiles.active=local
+
+# SQLite 
+spring.datasource.url=jdbc:sqlite:./src/main/resources/database/admin.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.servlet.encoding.force-response=true
