--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=mini7
 server.port=${PORT:8080}
-spring.profiles.active=local
+spring.profiles.active=dev
 spring.web.encoding.charset=UTF-8
 spring.web.encoding.enabled=true
 spring.web.encoding.force=true
